--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,600,700">
-    <link media="all" type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link media="all" type="text/css" rel="stylesheet" href="css/style.css?v=1.0">
     <link media="all" type="text/css" rel="stylesheet" href="css/sidebar-menu.css?v=1.0">
     <link media="all" type="text/css" rel="stylesheet" href="css/custom.css?v=1.3.3">
@@ -32,9 +33,6 @@
                                 <a href="index.html">
                                     <i class="zmdi zmdi-view-dashboard zmdi-hc-fw" title="Orders"></i>
                                 </a>
-                                <!-- <a href="manage-product.html">
-                                    <i class="zmdi zmdi-assignment zmdi-hc-fw" title="Products"></i>
-                                </a> -->
                             </ul>
                         </ul>
                     </div>
@@ -45,7 +43,7 @@
         <div class="right content-page">
             <div class="body content rows scroll-y">
                 <div class="box-info full" id="taskFormContainer">
-                    <h2>Jobs Listing Portal</h2>
+                    <h2>Job Listing Portal</h2>
                     <div class="panel-body pt-0">
                         <div class="row mb-4">
                             <div class="col-sm-12">
@@ -121,10 +119,10 @@
         </div>
 
     </div>
-    <script src="js/packages/jquery.min.js"></script>
+    <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/custom/common.js"></script>
     <script src="js/custom/manage-product.js"></script>
-    <script src="js/packages/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
